# github-tui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs
src/github/: client.rs  types.rs
src/ui/: actions_list.rs  help.rs  jobs_view.rs  log_viewer.rs  matrix_rain.rs  mod.rs  pr_detail.rs  pr_list.rs  render.rs  styles.rs
