[package]
name = "github-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for GitHub workflows"
authors = ["Jan Mo"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
octocrab = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
zip = "2"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
chrono = "0.4"
tui-textarea = "0.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
